--- a/index.htm
+++ b/index.htm
@@ -9,5 +9,6 @@
 <body>
     <h1>Borland</h1>
     <h1>bod</h1>
+    <img src="https://studfile.net/html/2706/126/html_yA1l1p3L47.zxOa/img-79XBnH.png" />
 </body>
 </html>
