--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Borland</h1>
-    <h1>bod</h1>
+    <a href="https://borderlands.2k.com/pt-BR/">Site Oficial da Borland</a>
     <img src="https://studfile.net/html/2706/126/html_yA1l1p3L47.zxOa/img-79XBnH.png" />
 </body>
 </html>
