--- a/index.htm
+++ b/index.htm
@@ -11,5 +11,6 @@
     <a href="https://borderlands.2k.com/pt-BR/">Site Oficial da Borland</a>
     <img src="https://studfile.net/html/2706/126/html_yA1l1p3L47.zxOa/img-79XBnH.png" />
     <img src="https://ogimg.infoglobo.com.br/in/23324147-126-f83/FT1086A/80364226_MANUAL-DE-CONDUTA-DO-PAPAI-NOELCurso-ensina-como-papai-noel-dome.jpg" />
+    <img src="https://img.freepik.com/fotos-premium/papai-noel-negro-afro-americano-desenhado-com-uma-barba-cinzenta-em-um-chapeu-vermelho-em-fundo-escuro_801411-652.jpg" />
 </body>
 </html>
