--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="https://miguelneves66.github.io/Borland/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/metro/26/b-lowercase.png">
   <title>Borland</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
