--- a/index.htm
+++ b/index.htm
@@ -171,7 +171,7 @@
 
   <section id="historia">
     <h2>História da Borland</h2>
-    <div class="image-placeholder">https://lens.usercontent.google.com/image?vsrid=CNuP3dXsntPvmQEQAhgBIiQxOGNiMzA5Ni1hZmEyLTRjZmQtYTQxOS00ZjhhMjU3MTA0YjcyBiICY2YoCw&gsessionid=7gpGCN2yOcg2YgaGqRoFrgW2lDEQIuP9c9Jb9QlWJafWesN078JmTg</div>
+    <img src="https://media.licdn.com/dms/image/v2/C4E22AQGxj1QvPu_CcA/feedshare-shrink_2048_1536/feedshare-shrink_2048_1536/0/1581450199269?e=2147483647&v=beta&t=BLXm_i159G46tFFPmxjrk1A7gA9B_Ush9Ti6CM-7zrI" alt="Equipe da Borland" class="image">
     <p>Fundada em 1983 por Philippe Kahn, a Borland nasceu no Vale do Silício com a proposta de oferecer ferramentas acessíveis para programadores. O primeiro sucesso foi o Turbo Pascal, que conquistou programadores pela sua velocidade e custo baixo.</p>
     <p>Com o tempo, a empresa evoluiu para atender também o mercado corporativo, sempre buscando manter o foco em performance, produtividade e inovação.</p>
   </section>
@@ -217,7 +217,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 - Projeto Educacional | Homenagem à Borland</p>
+    <p>&copy; 2025 - Projeto Educacional | Borland</p>
   </footer>
 
 </body>
