--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Borland - História e Legado</title>
+  <title>Borland</title>
   <style>
     :root {
       --bg: #f9f9f9;
