--- a/index.htm
+++ b/index.htm
@@ -149,6 +149,13 @@
       header, section {
         padding: 10px;
       }
+      
+      .image {
+  width: 100%;
+  height: auto;
+  margin: 20px 0;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
