--- a/index.htm
+++ b/index.htm
@@ -85,19 +85,6 @@
       line-height: 1.6;
     }
 
-    .image-placeholder {
-      background: #ccc;
-      width: 100%;
-      height: 250px;
-      margin: 20px 0;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #444;
-      font-size: 18px;
-    }
-
     /* Timeline */
     .timeline {
       border-left: 4px solid var(--accent);
@@ -151,12 +138,14 @@
       }
       
       .image {
-  width: 100%;
-  height: auto;
-  margin: 20px 0;
-  border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
+        max-width: 600px;
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 20px auto;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      }
   </style>
 </head>
 <body>
