--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Borland</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://miguelneves66.github.io/Borland/style.css" />
 </head>
 <body>
 
