--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
   <nav>
     <h1>Borland</h1>
     <ul>
+      <li><a href="https://miguelneves66.github.io/Borland/">Início</a></li>
       <li><a href="#historia">História</a></li>
       <li><a href="#kahn">Philippe Kahn</a></li>
       <li><a href="#delphi">Delphi</a></li>
