--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="https://miguelneves66.github.io/Borland/favicon.ico">
   <title>Borland</title>
   <link rel="stylesheet" href="https://miguelneves66.github.io/Borland/style.css" />
 </head>
