--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@
       <li><a href="#historia">História</a></li>
       <li><a href="#kahn">Philippe Kahn</a></li>
       <li><a href="#delphi">Delphi</a></li>
+      <li><a href="#situacao-atual">Situação Atual</a></li>
       <li><a href="#linha-do-tempo">Linha do Tempo</a></li>
     </ul>
   </nav>
@@ -71,6 +72,14 @@
       </div>
     </div>
   </section>
+
+  <section id="situacao-atual">
+  <h2>Situação Atual da Borland</h2>
+  <img src="https://allvectorlogo.com/img/2016/04/borland-logo.png" alt="Logo da Borland" class="image">
+  <p>Após anos de sucesso e também de desafios, a Borland passou por diversas aquisições. Em 2009, ela foi adquirida pela Micro Focus, uma empresa britânica especializada em software corporativo.</p>
+  <p>Desde então, muitas das ferramentas originalmente criadas pela Borland foram integradas ou descontinuadas. O legado da Borland ainda vive, especialmente por meio do Delphi, que continua sendo mantido e evoluído pela Embarcadero Technologies.</p>
+  <p>Apesar de não existir mais como empresa independente, a Borland deixou uma marca definitiva no desenvolvimento de software, sendo lembrada como pioneira na democratização da programação.</p>
+</section>
 
   <footer>
     <p>&copy; 2025 - Projeto Educacional | Borland</p>
