--- a/index.htm
+++ b/index.htm
@@ -47,6 +47,14 @@
     <p>Ele permitia criar aplicações Windows com interface gráfica de forma muito mais simples e eficiente, usando a biblioteca VCL. Seu sucesso foi tão grande que continua sendo usado até hoje por empresas de todo o mundo.</p>
   </section>
 
+   <section id="situacao-atual">
+  <h2>Situação Atual da Borland</h2>
+  <img src="https://allvectorlogo.com/img/2016/04/borland-logo.png" alt="Logo da Borland" class="image">
+  <p>Após anos de sucesso e também de desafios, a Borland passou por diversas aquisições. Em 2009, ela foi adquirida pela Micro Focus, uma empresa britânica especializada em software corporativo.</p>
+  <p>Desde então, muitas das ferramentas originalmente criadas pela Borland foram integradas ou descontinuadas. O legado da Borland ainda vive, especialmente por meio do Delphi, que continua sendo mantido e evoluído pela Embarcadero Technologies.</p>
+  <p>Apesar de não existir mais como empresa independente, a Borland deixou uma marca definitiva no desenvolvimento de software, sendo lembrada como pioneira na democratização da programação.</p>
+</section>
+
   <section id="linha-do-tempo">
     <h2>Linha do Tempo</h2>
     <div class="timeline">
@@ -70,16 +78,12 @@
         <h4>1999</h4>
         <p>Delphi 5 adiciona suporte a XML, ADO e localização de software.</p>
       </div>
+      <div class="timeline-event">
+        <h4>2009</h4>
+        <p>A empresa foi adquirida pela Micro Focus por US$75 Milhões.</p>
+      </div>
     </div>
   </section>
-
-  <section id="situacao-atual">
-  <h2>Situação Atual da Borland</h2>
-  <img src="https://allvectorlogo.com/img/2016/04/borland-logo.png" alt="Logo da Borland" class="image">
-  <p>Após anos de sucesso e também de desafios, a Borland passou por diversas aquisições. Em 2009, ela foi adquirida pela Micro Focus, uma empresa britânica especializada em software corporativo.</p>
-  <p>Desde então, muitas das ferramentas originalmente criadas pela Borland foram integradas ou descontinuadas. O legado da Borland ainda vive, especialmente por meio do Delphi, que continua sendo mantido e evoluído pela Embarcadero Technologies.</p>
-  <p>Apesar de não existir mais como empresa independente, a Borland deixou uma marca definitiva no desenvolvimento de software, sendo lembrada como pioneira na democratização da programação.</p>
-</section>
 
   <footer>
     <p>&copy; 2025 - Projeto Educacional | Borland</p>
