--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@
     <p>&copy; 2025 - Projeto Educacional | Borland</p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="https://miguelneves66.github.io/Borland/scripts.js"></script>
 </body>
 
 </html>
