--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="https://miguelneves66.github.io/Borland/favicon.ico">
   <title>Borland</title>
-  <link rel="stylesheet" href="https://miguelneves66.github.io/Borland/style.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -92,7 +92,7 @@
     <p>&copy; 2025 - Projeto Educacional | Borland</p>
   </footer>
 
-  <script src="https://miguelneves66.github.io/Borland/scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
