--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="https://miguelneves66.github.io/Borland/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="https://miguelneves66.github.io/Borland/imagens/favicon.ico" />
   <title>Borland</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -52,6 +52,12 @@
     <p>Delphi é uma IDE baseada em Object Pascal, lançada pela Borland em 1995. Foi uma das primeiras com foco em desenvolvimento visual rápido (RAD).</p>
   </section>
 
+  <section id="a-empresa-ao-longo-do-tempo">
+    <h2>A Empresa ao Longo do Tempo</h2>
+    <img src="" alt="Sede da Borland" class="image" />
+    <p>lorem ipsum dolor sit amet</p>
+  </section>
+
   <section id="situacao-atual">
     <h2>Situação Atual da Borland</h2>
     <img src="https://allvectorlogo.com/img/2016/04/borland-logo.png" alt="Logo da Borland" class="image" />
@@ -89,7 +95,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 - Projeto Educacional | Borland</p>
+    <p>&copy; 2025 - Projeto Educacional</p>
   </footer>
 
   <script src="scripts.js"></script>
