--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,7 @@
         <li><a href="#historia">História</a></li>
         <li><a href="#kahn">Philippe Kahn</a></li>
         <li><a href="#delphi">Delphi</a></li>
+        <li><a href="#a-empresa-ao-longo-do-tempo">A Empresa ao Longo do Tempo</a></li>
         <li><a href="#situacao-atual">Situação Atual</a></li>
         <li><a href="#linha-do-tempo">Linha do Tempo</a></li>
       </ul>
