--- a/index.htm
+++ b/index.htm
@@ -18,12 +18,12 @@
       </button>
       <h1 class="logo">Borland</h1>
       <ul class="nav-menu" id="nav-menu">
-        <li><a href="#inicio">Início |</a></li>
-        <li><a href="#historia">História |</a></li>
-        <li><a href="#kahn">Philippe Kahn |</a></li>
-        <li><a href="#delphi">Delphi |</a></li>
-        <li><a href="#a-empresa-ao-longo-do-tempo">Empresa ao Longo do Tempo |</a></li>
-        <li><a href="#situacao-atual">Situação Atual |</a></li>
+        <li><a href="#inicio">Início</a></li>
+        <li><a href="#historia">História</a></li>
+        <li><a href="#kahn">Philippe Kahn</a></li>
+        <li><a href="#delphi">Delphi</a></li>
+        <li><a href="#a-empresa-ao-longo-do-tempo">Empresa ao Longo do Tempo</a></li>
+        <li><a href="#situacao-atual">Situação Atual</a></li>
         <li><a href="#linha-do-tempo">Linha do Tempo</a></li>
       </ul>
     </div>
@@ -55,7 +55,7 @@
 
   <section id="a-empresa-ao-longo-do-tempo">
     <h2>A Empresa ao Longo do Tempo</h2>
-    <img src="https://miguelneves66.github.io/Borland/imagens/sede_borland.jpg" alt="Sede atual da Borland" class="image" />
+    <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp" alt="Cidade Aonde a Borland Ficava" class="image" />
     <p>lorem ipsum dolor sit amet</p>
   </section>
 
