--- a/index.htm
+++ b/index.htm
@@ -30,8 +30,12 @@
   </nav>
 
   <header id="inicio">
-    <h2>Bem-vindo ao legado da Borland</h2>
-    <p>A Borland marcou uma geração de desenvolvedores ao tornar o desenvolvimento de software mais acessível e produtivo. Este site é uma homenagem à sua história e impacto.</p>
+    <h2>Introdução</h2>
+    <p>A Borland é uma empresa histórica no setor de tecnologia, especialmente reconhecida por seu papel pioneiro no desenvolvimento de ferramentas de software para programadores.
+      Fundada em 1983, a Borland ganhou destaque com suas soluções inovadoras que facilitaram a criação de aplicações, principalmente no ambiente Windows.
+      Entre seus produtos mais famosos estão o Turbo Pascal e o Delphi, que se tornaram referência em linguagens de programação e ambientes de desenvolvimento integrados (IDEs).
+      Ao longo dos anos, a Borland contribuiu significativamente para a evolução do desenvolvimento de software, oferecendo ferramentas que combinam eficiência,
+      produtividade e inovação. Apesar de passar por várias transformações e aquisições, a marca Borland ainda é lembrada como um símbolo de qualidade e inovação no universo do desenvolvimento de software.</p>
   </header>
 
   <section id="historia">
