--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
         <li><a href="#historia">História</a></li>
         <li><a href="#kahn">Philippe Kahn</a></li>
         <li><a href="#delphi">Delphi</a></li>
-        <li><a href="#a-empresa-ao-longo-do-tempo">Empresa ao Longo do Tempo</a></li>
+        <li><a href="#evolucao">Evolução</a></li>
         <li><a href="#situacao-atual">Situação Atual</a></li>
         <li><a href="#linha-do-tempo">Linha do Tempo</a></li>
       </ul>
@@ -41,8 +41,10 @@
   <section id="historia">
     <h2>História da Borland</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/equipe_borland.jpg" alt="Equipe da Borland" class="image" />
-    <p>Fundada em 1983 por Philippe Kahn, a Borland nasceu no Vale do Silício com a proposta de oferecer ferramentas acessíveis para programadores.</p>
-    <p>O primeiro sucesso foi o Turbo Pascal, que conquistou programadores pela sua velocidade e custo baixo.</p>
+    <p>A Borland foi fundada em 1983 por Philippe Kahn e um grupo de ex-funcionários da empresa Zilog.
+      O nome "Borland" foi uma fusão entre "Bor" (do nome do co-fundador, Olivier Borland) e "Land", significando "terreno" ou "campo" de trabalho no mundo da tecnologia.
+      O primeiro grande sucesso da Borland foi o Turbo Pascal, lançado em 1983. Essa linguagem de programação ganhou popularidade por sua rapidez e eficiência em comparação com outras ferramentas de desenvolvimento da época.
+      Turbo Pascal ajudou a Borland a se estabelecer como uma força importante no mercado de ferramentas de desenvolvimento de software.</p>
   </section>
 
   <section id="kahn">
@@ -57,7 +59,7 @@
     <p>Delphi é uma IDE baseada em Object Pascal, lançada pela Borland em 1995. Foi uma das primeiras com foco em desenvolvimento visual rápido (RAD).</p>
   </section>
 
-  <section id="a-empresa-ao-longo-do-tempo">
+  <section id="evolucao">
     <h2>A Empresa ao Longo do Tempo</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp" alt="Cidade Aonde a Borland Ficava" class="image" />
     <p>lorem ipsum dolor sit amet</p>
