--- a/index.htm
+++ b/index.htm
@@ -48,7 +48,7 @@
   </section>
 
   <section id="kahn">
-    <h2>Quem foi Philippe Kahn</h2>
+    <h2>Quem é Philippe Kahn</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/dono_borland.jpg" alt="Foto do Philippe Kahn" class="image" />
     <p>Philippe Kahn foi um matemático francês que, ao imigrar para os Estados Unidos, criou a Borland. Em 1997, ele também desenvolveu o primeiro protótipo de celular com câmera integrada capaz de enviar imagens – um precursor direto das redes sociais visuais.</p>
   </section>
@@ -60,7 +60,7 @@
   </section>
 
   <section id="evolucao">
-    <h2>A Empresa ao Longo do Tempo</h2>
+    <h2>Evolução da Empresa</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp" alt="Cidade Aonde a Borland Ficava" class="image" />
     <p>lorem ipsum dolor sit amet</p>
   </section>
