--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,6 @@
         <li><a href="#historia">História</a></li>
         <li><a href="#kahn">Philippe Kahn</a></li>
         <li><a href="#delphi">Delphi</a></li>
-        <li><a href="#evolucao">Evolução</a></li>
         <li><a href="#situacao-atual">Situação Atual</a></li>
         <li><a href="#linha-do-tempo">Linha do Tempo</a></li>
       </ul>
@@ -59,12 +58,6 @@
     <p>Delphi é uma IDE baseada em Object Pascal, lançada pela Borland em 1995. Foi uma das primeiras com foco em desenvolvimento visual rápido (RAD).</p>
   </section>
 
-  <section id="evolucao">
-    <h2>Evolução da Empresa</h2>
-    <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp" alt="Cidade Aonde a Borland Ficava" class="image" />
-    <p>lorem ipsum dolor sit amet</p>
-  </section>
-
   <section id="situacao-atual">
     <h2>Situação Atual da Borland</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/logo_borland.png" alt="Logo da Borland" class="image" />
@@ -73,6 +66,7 @@
 
   <section id="linha-do-tempo">
     <h2>Linha do Tempo</h2>
+    <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp" alt="Cidade Aonde a Borland Ficava" class="image" />
     <div class="timeline">
       <div class="timeline-event">
         <h4>1983</h4>
@@ -86,17 +80,29 @@
         <h4>1995</h4>
         <p>Lançamento do Delphi 1.0.</p>
       </div>
+      </div>
       <div class="timeline-event">
-        <h4>1997</h4>
-        <p>Delphi 3 e melhorias na VCL.</p>
+        <h4>1998</h4>
+        <p>Mudança de Nome pra Inprise Corporation.</p>
       </div>
       <div class="timeline-event">
         <h4>1999</h4>
-        <p>Suporte a XML e ADO no Delphi 5.</p>
+        <p>Voltou com o nome original Borland.</p>
+      </div>
+    <div class="timeline-event">
+        <h4>2005</h4>
+        <p>Lançamento do C++Builder.</p>
+      <div class="timeline-event">
+        <h4>2006</h4>
+        <p>Separou seu negócio de IDE para se focar no mercado corporativo.</p>
       </div>
       <div class="timeline-event">
         <h4>2009</h4>
         <p>Aquisição pela Micro Focus.</p>
+      </div>
+      <div class="timeline-event">
+        <h4>2023</h4>
+        <p>Aquisição pela OpenText.</p>
       </div>
     </div>
   </section>
