--- a/index.htm
+++ b/index.htm
@@ -30,6 +30,7 @@
 
   <header id="inicio">
     <h2>Introdução</h2>
+    <img src="https://miguelneves66.github.io/Borland/imagens/logo_borland.png" alt="Logo da Borland" class="image" />
     <p>A Borland é uma empresa histórica no setor de tecnologia, especialmente reconhecida por seu papel pioneiro no desenvolvimento de ferramentas de software para programadores.
       Fundada em 1983, a Borland ganhou destaque com suas soluções inovadoras que facilitaram a criação de aplicações, principalmente no ambiente Windows.
       Entre seus produtos mais famosos estão o Turbo Pascal e o Delphi, que se tornaram referência em linguagens de programação e ambientes de desenvolvimento integrados (IDEs).
