--- a/index.htm
+++ b/index.htm
@@ -50,13 +50,21 @@
   <section id="kahn">
     <h2>Quem é Philippe Kahn</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/dono_borland.jpg" alt="Foto do Philippe Kahn" class="image" />
-    <p>Philippe Kahn foi um matemático francês que, ao imigrar para os Estados Unidos, criou a Borland. Em 1997, ele também desenvolveu o primeiro protótipo de celular com câmera integrada capaz de enviar imagens – um precursor direto das redes sociais visuais.</p>
+    <p>Nascido no dia 16 de março de 1952, o engenheiro de software francês Phillipe Kahn foi creditado pela invenção da primeira câmera fotográfica
+em um aparelho de telefonia móvel, ele também foi a primeira pessoa a transmitir uma imagem para a internet através de um aparelho móvel.
+Ao longo de sua vida ele fundou quatro empresas de software: a FullPower Technologies, em 2003,a LightSurf Technologies em 1998 (adquirida pela VeriSign em 2005), a Starfish Software em 1994 (adquirida pela Motorola em 1998), e a Borland, fundada em 1982 (adquirida pela Micro Focus em 2009).
+Ao longo de sua carreira profissional ele trabalhou em quatro empresas: a Borland (1982-1994), a Starfish Software (1994-1998), a LightSurf Technologies (1997-2005) e a Fullpower Technologies (2003-presente). 
+</p>
   </section>
 
   <section id="delphi">
     <h2>O Delphi</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/interface_borland.webp" alt="Interface do Delphi" class="image" />
-    <p>Delphi é uma IDE baseada em Object Pascal, lançada pela Borland em 1995. Foi uma das primeiras com foco em desenvolvimento visual rápido (RAD).</p>
+    <p>Criado pela Borland Software Corporation, o Delphi é um compilador e uma linguagem de programação, atualmente produzida pela empresa Embarcadero.
+O Delphi é muito utilizado no desenvolvimento de aplicações desktop, aplicações multicamadas e cliente/servidor, compatível com os bancos de dados mais conhecidos do mercado.
+Seu desenvolvimento teve inicio no ano de 1993 pela empresa Borland com o objetivo de criar um ambiente visual para aplicações  na plataforma Windows, seu lançamento ocorreu
+em 1995 para a plataforma Windows 16 bits sendo o primeiro a ser descrito como um ambiente RAD(traduzido para português, Desenvolvimento Rápido de Aplicações) e foi uma evolução
+da linguagem Turbo pascal. </p>
   </section>
 
   <section id="situacao-atual">
