--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,10 @@ da linguagem Turbo pascal. </p>
   <section id="situacao-atual">
     <h2>Situação Atual da Borland</h2>
     <img src="https://miguelneves66.github.io/Borland/imagens/logo_borland.png" alt="Logo da Borland" class="image" />
-    <p>Em 2009, a Borland foi adquirida pela britânica Micro Focus. Hoje, seu legado permanece principalmente por meio do Delphi, mantido pela Embarcadero Technologies.</p>
+    <p>Em 2025, a situação da Borland, que já não existe como empresa independente, continua a ser relevante no mercado de desenvolvimento de software.
+      A Borland, depois de ter separado os negócios de IDEs(que se transformaram na empresa CodeGear), acabou ficando meio obsoleta no mercado, o que fez com que ela entrasse em crise.
+    Crise essa que fez com que a empresa precisasse ser vendida para a Micro Focus em 2009, e mais tarde vendida para a OpenText em 2023.
+    Hoje em dia, a empresa é avaliada em -$215,7 milhões USD</p>
   </section>
 
   <section id="linha-do-tempo">
@@ -103,6 +106,7 @@ da linguagem Turbo pascal. </p>
       <div class="timeline-event">
         <h4>2006</h4>
         <p>Separou seu negócio de IDE para se focar no mercado corporativo.</p>
+        <p>(Essa parte que foi separada se tornou a CodeGear, que foi vendida para a Embarcadero poucos anos depois)</p>
       </div>
       <div class="timeline-event">
         <h4>2009</h4>
