--- a/index.htm
+++ b/index.htm
@@ -106,7 +106,11 @@ da linguagem Turbo pascal. </p>
       <div class="timeline-event">
         <h4>2006</h4>
         <p>Separou seu negócio de IDE para se focar no mercado corporativo.</p>
-        <p>(Essa parte que foi separada se tornou a CodeGear, que foi vendida para a Embarcadero poucos anos depois)</p>
+        <p>(Essa parte que foi separada se tornou a CodeGear)</p>
+      </div>
+      <div class="timeline-event">
+        <h4>2008</h4>
+        <p>Anunciou a venda da subsidiária CodeGear à Embarcadero Technologies</p>
       </div>
       <div class="timeline-event">
         <h4>2009</h4>
