--- a/index.htm
+++ b/index.htm
@@ -76,9 +76,12 @@ da linguagem Turbo pascal. </p>
     Hoje em dia, a empresa é avaliada em -$215,7 milhões USD</p>
   </section>
 
-  <section id="linha-do-tempo">
-    <h2>Linha do Tempo</h2>
-    <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp" alt="Cidade Aonde a Borland Ficava" class="image" />
+<section id="linha-do-tempo">
+  <h2>Linha do Tempo</h2>
+  <div class="timeline-container">
+    <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp"
+         alt="Cidade Aonde a Borland Ficava" class="image timeline-img" />
+    
     <div class="timeline">
       <div class="timeline-event">
         <h4>1983</h4>
@@ -100,9 +103,10 @@ da linguagem Turbo pascal. </p>
         <h4>1999</h4>
         <p>Voltou com o nome original Borland.</p>
       </div>
-    <div class="timeline-event">
+      <div class="timeline-event">
         <h4>2005</h4>
         <p>Lançamento do C++Builder.</p>
+      </div>
       <div class="timeline-event">
         <h4>2006</h4>
         <p>Separou seu negócio de IDE para se focar no mercado corporativo.</p>
@@ -110,7 +114,7 @@ da linguagem Turbo pascal. </p>
       </div>
       <div class="timeline-event">
         <h4>2008</h4>
-        <p>Anunciou a venda da subsidiária CodeGear à Embarcadero Technologies</p>
+        <p>Anunciou a venda da subsidiária CodeGear à Embarcadero Technologies.</p>
       </div>
       <div class="timeline-event">
         <h4>2009</h4>
@@ -121,7 +125,9 @@ da linguagem Turbo pascal. </p>
         <p>Aquisição pela OpenText.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <footer>
     <p>&copy; 2025 - Projeto Educacional</p>
