--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@ da linguagem Turbo pascal. </p>
 
   <section id="situacao-atual">
     <h2>Situação Atual da Borland</h2>
-    <img src="https://miguelneves66.github.io/Borland/imagens/logo_borland.png" alt="Logo da Borland" class="image" />
+    <img src="https://miguelneves66.github.io/Borland/imagens/stocks_borland.jpg" alt="Logo da Borland" class="image" />
     <p>Em 2025, a situação da Borland, que já não existe como empresa independente, continua a ser relevante no mercado de desenvolvimento de software.
       A Borland, depois de ter separado os negócios de IDEs(que se transformaram na empresa CodeGear), acabou ficando meio obsoleta no mercado, o que fez com que ela entrasse em crise.
     Crise essa que fez com que a empresa precisasse ser vendida para a Micro Focus em 2009, e mais tarde vendida para a OpenText em 2023.
