--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="https://miguelneves66.github.io/Borland/imagens/favicon.ico" />
   <title>Borland</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://miguelneves66.github.io/Borland/style.css" />
 </head>
 
 <body>
