--- a/index.htm
+++ b/index.htm
@@ -128,12 +128,27 @@ da linguagem Turbo pascal. </p>
   </div>
 </section>
 
+  <section id="galeria">
+  <h2>Galeria de Fotos</h2>
+  <div class="gallery">
+    <img src="https://miguelneves66.github.io/Borland/imagens/logo_borland.png" alt="logo da borland" />
+    <img src="https://miguelneves66.github.io/Borland/imagens/equipe_borland.jpg" alt="equipe da borland" />
+    <img src="https://miguelneves66.github.io/Borland/imagens/interface_borland.webp" alt="interface do programa delphi" />
+    <img src="https://miguelneves66.github.io/Borland/imagens/stocks_borland.jpg" alt="as ações da borland" />
+    <img src="https://miguelneves66.github.io/Borland/imagens/localiza%C3%A7ao_borland.webp" alt="a cidade onde a borland era localizada" />
+  </div>
+
+  <div class="modal" id="modal">
+    <span class="close" id="closeModal">&times;</span>
+    <img class="modal-content" id="modalImg" />
+  </div>
+</section>
 
   <footer>
     <p>&copy; 2025 - Projeto Educacional</p>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="https://miguelneves66.github.io/Borland/scripts.js"></script>
 </body>
 
 </html>
