--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,7 @@
         <li><a href="#delphi">Delphi</a></li>
         <li><a href="#situacao-atual">Situação Atual</a></li>
         <li><a href="#linha-do-tempo">Linha do Tempo</a></li>
+        <li><a href="#galeria">Galeria</a></li>
       </ul>
     </div>
   </nav>
